2008-01-26  Roger Leigh  <rleigh@debian.org>

	* etc/Makefile.am (builddsysconf_DATA): Add buildd config files.

	* configure.ac: Add paths for buildd config files.

2008-01-26  Roger Leigh  <rleigh@debian.org>

	* bin/wanna-build-mail: Rename from wanna-build-mail.pl.

	* src/wanna-build-mail.c: Remove.

	* src/Makefile.am:
	(bin_PROGRAMS): Remove wanna-build-mail.c.

2008-01-21  Roger Leigh  <rleigh@debian.org>

	* NEWS: Add changes for 0.57.1.

	* configure.ac: Create .tar.gz distribution tarball.

2008-01-21  Roger Leigh  <rleigh@debian.org>

	* lib/Makefile.am (perlmod_DATA): Add Buildd.pm.

2008-01-21  Roger Leigh  <rleigh@debian.org>

	* etc/buildd.conf: Update with default options.

	* lib/Buildd/Conf.pm: Add and export read function to read
	config.  Add checks from buildd.

	* bin/buildd: Use Buildd::Conf.  Use Buildd::Conf::read in place
	of read_config().

	* bin/wanna-build: Remove isin function (now in Sbuild.pm).

	* bin/buildd-uploader, bin/buildd-watcher: Use Buildd::Conf.

2008-01-21  Roger Leigh  <rleigh@debian.org>

	* bin/sbuild: Rename "Session Managed" to "Session Cloned".

	* lib/Sbuild/Chroot.pm (init): Rename "Session Managed" to
	"Session Cloned".

2008-01-21  Roger Leigh  <rleigh@debian.org>

	* lib/Sbuild.pm: Add parse_date function (from WannaBuild.pm).

	* Makefile.am (SUBDIRS): Add src.

2008-01-21  Roger Leigh  <rleigh@debian.org>

	* etc/wanna-build.conf: Correct comments.

2008-01-21  Roger Leigh  <rleigh@debian.org>

	* configure.ac: Bump version to 0.57.1.

2008-01-21  Roger Leigh  <rleigh@debian.org>

	* src/buildd-mail-wrapper.c, src/wanna-build-mail.c: Remove
	shebang in comment boilerplate.

	* configure.ac: Generate new Makefiles.

	* src/Makefile.am: Build buildd-mail-wrapper and wanna-build-mail.

	* lib/Makefile.am (SUBDIRS): Add Buildd and WannaBuild.

	* lib/Buildd/Makefile.am, lib/WannaBuild/Makefile.am: New files.
	Install perl modules.

2008-01-21  Roger Leigh  <rleigh@debian.org>
